Emma: added extra links and text